Add more exports to VM options